[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {  version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
anyhow = "1"
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"
wasm-bindgen-futures = "0.4.38"

common = { version = "0.1.0", path = "../common" }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]